# q-analysis

./: .gitignore  README.MD  pyproject.toml  setup.py
.github/workflows/: CI.yml
q_analysis/: __init__.py  connected_components.py  simplicial_complex.py  stat.py  transformers.py  utils.py  viz.py
q_analysis/examples/: scale_free_configurational.py
rust/: Cargo.toml
rust/src/: bitset.rs  graph_q_components.rs  lib.rs  max_cliques.rs  persistence.rs  persistence_tests.rs  persistent_q_components.rs  pybindings.rs  types.rs  utils.rs
scripts/: bench_persistence.py  usage_example.py
src/q_analysis/: __init__.py  coauthors_fsv.py  persistence.py  simplicial_complex.py  simplicial_complex_new.py  stat.py  transformers.py  utils.py
